--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a id="ham" class="fa-solid fa-bars"></a></li>
                     <li><a id="hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
-                    <a id="logo" href="index.html">Skobutikken</a>
+                    <li><a id="logo" href="index.html">Skobutikken</a></li>
                     <li><a id="handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
@@ -34,7 +34,7 @@
                 <a href="produkt.html" class="knapper">Damesko</a>
                 <a href="#" class="knapper">Tilbehør til sko</a>
             </section>
-              <section id="search">
+            <section id="search">
                 <input class="searchbar" type="text" placeholder="Søk blant produkter...">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-question"></i>
@@ -66,7 +66,7 @@
             <h4>Nettside laget av Vilde Dybli Raaden 2023</h4>
         </footer>
         </div>
-
+        <!--Javascript for hamburgermenyen-->
         <script>
             let x = document.querySelector(".navbar")
             document.getElementById("ham").addEventListener("click", (e) => {
@@ -80,4 +80,7 @@
     </body>
 </html>
 
-<!--Kilder: w3school, webutvikling boka. https://fashionipsum.com/classic.html-->
+<!--Kilder:
+    Webutvikling av Tom Heine Natt, Eva M. Hornnes, Jostein Nordengen
+    W3schools.com
+-->
