--- a/produkt.html
+++ b/produkt.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a id="ham" class="fa-solid fa-bars"></a></li>
                     <li><a id="hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
-                    <a id="logo" href="index.html">Skobutikken</a>
+                    <li><a id="logo" href="index.html">Skobutikken</a></li>
                     <li><a id="handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
@@ -94,6 +94,7 @@
             <h4>Nettside laget av Vilde Dybli Raaden 2023</h4>
         </footer>
         </div>
+        <!--Javascript for hamburgermenyen-->
         <script>
             let x = document.querySelector(".navbar")
             document.getElementById("ham").addEventListener("click", (e) => {
@@ -106,3 +107,8 @@
         </script>
     </body>
 </html>
+
+<!--Kilder:
+    Webutvikling av Tom Heine Natt, Eva M. Hornnes, Jostein Nordengen
+    W3schools.com
+-->
