Linka analyse siden med de andre, og starta på html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="retur.html">Returnering</a></li>
                     <li><a href="#">Om oss</a></li>
                     <li><a href="#">Kontaktinformasjon</a></li>
+                    <li><a href="analyse.html">Oblig 4 Analyse</a></li>
                 </ul>
             </nav>
         </header>
