Tatt flere skjermbilder

--- a/analyse.html
+++ b/analyse.html
@@ -28,8 +28,20 @@
                 </ul>
             </nav>
         </header>
-        <main></main>
-        <footer></footer>
+        <main>
+            <h1>Analyse</h1>
+
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#">Om oss</a></li>
+                    <li><a href="#">Kontaktinformasjon</a></li>
+                    <li><a href="#">Sosialemedier</a></li>
+                </ul>
+            </nav>
+            <h4>Nettside laget av Vilde Dybli Raaden 2023</h4>
+        </footer>
         </div>
         <!--Javascript for hamburgermenyen-->
         <script>
