Lagt inn bilder og delt opp i overskrifter

--- a/analyse.html
+++ b/analyse.html
@@ -30,7 +30,75 @@
         </header>
         <main>
             <h1>Analyse</h1>
-
+            <section>
+                <article>
+                    <h2>Nøkkelord undersøkelse</h2>
+                    <figure>
+                        <img src="img/googletrendsord.png" alt="Bildet viser søkeord fra googletrends, tursko, tursko dame, tursko herre, unisex og hverdagssko. ">
+                        <img src="img/googletrendsgraf.png" alt="Bildet viser en graf over populæriteten av søkeordene.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>SEO Analyse</h2>
+                    <h3>Forsiden</h3>
+                    <figure>
+                        <img src="img/forsidescore1.png" alt="Bildet viser scoren forsiden fikk på SEO analysen.">
+                        <img src="img/seoforside1.png" alt="Bildet viser scoren og forbedringspotensiale forsiden fikk på SEO analysen.">
+                        <img src="img/accessebilityforside1.png" alt="Bildet viser scoren og forbedringspotensiale forsiden fikk når det kommer til accessebility.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                    <h3>Produktsiden</h3>
+                    <figure>
+                        <img src="img/produktscore1.png" alt="Bildet viser scoren produktsiden fikk på SEO analysen.">
+                        <img src="img/seoprodukt1.png" alt="Bildet viser scoren og forbedringspotensiale produktsiden fikk på SEO analysen.">
+                        <img src="img/accessebilityprodukt1.png" alt="Bildet viser scoren og forbedringspotensiale produktsiden fikk når det kommer til accessebility.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                    <h3>Retursiden</h3>
+                    <figure>
+                        <img src="img/returscore1.png" alt="Bildet viser scoren retursiden fikk på SEO analysen.">
+                        <img src="img/seoretur1.png" alt="Bildet viser scoren og forbedringspotensiale retursiden fikk på SEO analysen.">
+                        <img src="img/accessebilityretur1.png" alt="Bildet viser scoren og forbedringspotensiale retursiden fikk når det kommer til accessebility.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>UU Analyse</h2>
+                    <h3>Forsiden</h3>
+                    <figure>
+                        <img src="img/webaimforside1.png" alt="Bildet viser tilbakemeldingene forsiden fikk fra UU analysen på Webaim.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                    <h3>Produktsiden</h3>
+                    <figure>
+                        <img src="img/webaimprodukt1.png" alt="Bildet viser tilbakemeldingene produktsiden fikk fra UU analysen på Webaim.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                    <h3>Retursiden</h3>
+                    <figure>
+                        <img src="img/webaimretur1.png" alt="Bildet viser tilbakemeldingene retursiden fikk fra UU analysen på Webaim.">
+                    </figure>
+                    <p class="analyse">legg inn tekst her</p>
+                </article>
+            </section>
+            <section>
+                <article>
+                    <h2>ChatGPT Analyse</h2>
+                </article>
+            </section>
+            <section>
+                <h2>Sammenligning av analysene</h2>
+            </section>
+            <section>
+                <article>
+                    <h2>Forbedringer og tiltak</h2>
+                </article>
+            </section>
         </main>
         <footer>
             <nav>
