Skrevet inn litt mer for analysen og laget tabell

--- a/analyse.html
+++ b/analyse.html
@@ -37,7 +37,7 @@
                         <img src="img/googletrendsord.png" alt="Bildet viser søkeord fra googletrends, tursko, tursko dame, tursko herre, unisex og hverdagssko. ">
                         <img src="img/googletrendsgraf.png" alt="Bildet viser en graf over populæriteten av søkeordene.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Nøkkelordene jeg valgte er tursko, tursko dame, tursko herre, unisex og hverdagssko. Dette var ord som passet med nettbutikken min, og som hadde blitt søkt etter en del det siste året. Ikke alle ordene var like mye søkt etter, men jeg tok de med fordi de var relevante. Skobutikken er for eldre personer, men akkurat nå er det bare tursko tilgjengelig så det er det som ble hovedfokuset. Grafen viser hvor mye ordene er søkt på i Norge de siste 12 månedene i sammenheng med butikkhandel.</p>
                 </article>
             </section>
             <section>
@@ -49,21 +49,25 @@
                         <img src="img/seoforside1.png" alt="Bildet viser scoren og forbedringspotensiale forsiden fikk på SEO analysen.">
                         <img src="img/accessebilityforside1.png" alt="Bildet viser scoren og forbedringspotensiale forsiden fikk når det kommer til accessebility.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Jeg testa alle tre sidene på Lighthouse, hvor jeg huket av for accessibility, best practices og SEO. Alle sidene fikk 100% på best practices så dette vil ikke bli nevnt noe mer i denne analysen. </p>
+                    <p class="analyse">Forsiden scoret 93% på accessibility. Det Lighthouse klager på er at linkene/ikonene i headeren ikke har noen decription eller alt-tekst sånn at opplesningsverktøy kan lese opp navigasjonen for brukere.</p>
+                    <p class="analyse">Forsiden scoret 89% på SEO. Det er to problemer her. Det første er at det mangler en meta tag for description. Det andre problemet er at linkene/ikonene i headeren er for tette og bør gjøres større, for at det blir lettere å trykke, spesielt på mobil.</p>
                     <h3>Produktsiden</h3>
                     <figure>
                         <img src="img/produktscore1.png" alt="Bildet viser scoren produktsiden fikk på SEO analysen.">
                         <img src="img/seoprodukt1.png" alt="Bildet viser scoren og forbedringspotensiale produktsiden fikk på SEO analysen.">
                         <img src="img/accessebilityprodukt1.png" alt="Bildet viser scoren og forbedringspotensiale produktsiden fikk når det kommer til accessebility.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Produktsiden scoret 85% på accessibility. Her er det flere problemer. Det mangler description på linkene i headeren sånn som på forsiden. Så vil den at det skal legges på en label på knappene hvor man velger størrelse og farge på sko. I tillegg har jeg gjort en feil med noen H tagger som må endre nummer/rekkefølge.</p>
+                    <p class="analyse">Produktsiden scoret 88% på SEO. Den viser at det er samme problem som med forsiden. Det er manglende meta tag for description, og for lite ikon eller område å trykke på i headeren og på velg størrelse/farge knappene.</p>
                     <h3>Retursiden</h3>
                     <figure>
                         <img src="img/returscore1.png" alt="Bildet viser scoren retursiden fikk på SEO analysen.">
                         <img src="img/seoretur1.png" alt="Bildet viser scoren og forbedringspotensiale retursiden fikk på SEO analysen.">
                         <img src="img/accessebilityretur1.png" alt="Bildet viser scoren og forbedringspotensiale retursiden fikk når det kommer til accessebility.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Retursiden scoret 89% på accessibility. Det mangler en description på linkene i headeren og jeg må rette opp i H tagene.</p>
+                    <p class="analyse">Retursiden scoret 88% på SEO. Det er samme problemer her som på de andre sidene. Manglende meta tag for description og for lite område å trykke på i headeren.</p>
                 </article>
             </section>
             <section>
@@ -73,26 +77,39 @@
                     <figure>
                         <img src="img/webaimforside1.png" alt="Bildet viser tilbakemeldingene forsiden fikk fra UU analysen på Webaim.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Webaim ga forsiden 3 errors og 5 alerts. Det første den reagerer på er at søkefunksjonen min mangler label. I tillegg klager den på empty links som jeg tror er at den vil at det skal være alt-tekst på linkene slik som Lighthouse også ville. Det er også gjort en feil i H tagene mine som må fikses. Redundant link betyr at det er flere linker til samme sted på nettsiden, dette er jeg ikke sikker på om jeg må endre, for jeg vil jo at brukeren kan navigere på flere måter.</p>
                     <h3>Produktsiden</h3>
                     <figure>
                         <img src="img/webaimprodukt1.png" alt="Bildet viser tilbakemeldingene produktsiden fikk fra UU analysen på Webaim.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Webaim ga produktsiden 2 errors og 10 alerts. Empty link er at den vil ha description eller alt-tekst på linken i headeren. Det mangler labels på farge/størrelse knappene. I tillegg er labelene på «velg farge/størrelse» satt opp feil (orphaned form label). Så er det flere H tager som må fikses. Og den klager på linker som går til samme sted på siden.</p>
                     <h3>Retursiden</h3>
                     <figure>
                         <img src="img/webaimretur1.png" alt="Bildet viser tilbakemeldingene retursiden fikk fra UU analysen på Webaim.">
                     </figure>
-                    <p class="analyse">legg inn tekst her</p>
+                    <p class="analyse">Webaim ga retursiden 2 errors og 5 alerts. Erroren er manglende description på linkene i headeren. Så er det flere feil i H tager og linker som går til samme sted. I tillegg mener den at seksjonen med stegene for retur burde vært en liste.</p>
                 </article>
             </section>
             <section>
                 <article>
                     <h2>ChatGPT Analyse</h2>
+                    <p class="analyse">Når jeg skulle bruke ChatGPT til å vurdere koden ba jeg den om dette: Kan du vurdere koden ut i fra et SEO og UU perspektiv, og kan du komme med spesifikke løsninger. Deretter la jeg inn koden for hver side og den kom med løsninger til forbedringer.</p>
                 </article>
             </section>
             <section>
                 <h2>Sammenligning av analysene</h2>
+                <table>
+                    <tr>
+                        <th>ChatGPT</th>
+                        <th>Lighthouse</th>
+                        <th>Webaim</th>
+                    </tr>
+                    <tr>
+                        <td>test</td>
+                        <td>rsultater</td>
+                        <td>her</td>
+                    </tr>
+                </table>
             </section>
             <section>
                 <article>
