Ferdig med tabell

--- a/analyse.html
+++ b/analyse.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1,0">
         <meta charset="UTF-8">
@@ -93,7 +93,24 @@
             <section>
                 <article>
                     <h2>ChatGPT Analyse</h2>
-                    <p class="analyse">Når jeg skulle bruke ChatGPT til å vurdere koden ba jeg den om dette: Kan du vurdere koden ut i fra et SEO og UU perspektiv, og kan du komme med spesifikke løsninger. Deretter la jeg inn koden for hver side og den kom med løsninger til forbedringer.</p>
+                    <p class="analyse">Når jeg skulle bruke ChatGPT til å vurdere koden ba jeg den om dette: Kan du vurdere koden ut i fra et SEO og UU perspektiv, og kan du komme med spesifikke løsninger? Deretter la jeg inn koden for hver side og den kom med løsninger til forbedringer. Det var mye likt som gikk igjen på alle sidene så her er et sammendrag av tilbakemeldingene.</p>
+                    <h3>Forslag til SEO-forbedringer</h3>
+                    <ul>
+                        <li>Rett opp skrivefeil i meta viewport fra 1,0 til 1.0.</li>
+                        <li>Lag en mer spesifikk tittel og inkluder nøkkelord.</li>
+                        <li>Lag en mer beskrivende URL, f.eks bytt fra produkt.html til herresko.html.</li>
+                        <li>Lag mer beskrivende alt-tekst.</li>
+                        <li>Lag mer søkevennlig innhold med beskrivende nøkkelord.</li>
+                        <li>Rett opp hirarkiet i H-tagene.</li>
+                    </ul>
+                    <h3>Forslag til UU-forbedringer</h3>
+                    <ul>
+                        <li>Inkluder tastaturnavigasjon i hamburgermenyen.</li>
+                        <li>Legg til ARIA-attributter.</li>
+                        <li>Sørg for nok tekst/bakgrunnsfarge kontrast.</li>
+                        <li>Sørg for at nettsiden er resposiv.</li>
+                        <li>Lag mer beskrivende alt-tekst.</li>
+                    </ul>
                 </article>
             </section>
             <section>
@@ -105,9 +122,54 @@
                         <th>Webaim</th>
                     </tr>
                     <tr>
-                        <td>test</td>
-                        <td>rsultater</td>
-                        <td>her</td>
+                        <td>Feil i H-tager: JA</td>
+                        <td>Feil i H-tager: JA</td>
+                        <td>Feil i H-tager: JA</td>
+                    </tr>
+                    <tr>
+                        <td>Skrivefeil komma/punktum: JA</td>
+                        <td>Skrivefeil komma/punktum: NEI</td>
+                        <td>Skrivefeil komma/punktum: NEI</td>
+                    </tr>
+                    <tr>
+                        <td>Mer/mer beskrivende alt-tekst: JA</td>
+                        <td>Mer/mer beskrivende alt-tekst: JA</td>
+                        <td>Mer/mer beskrivende alt-tekst: JA</td>
+                    </tr>
+                    <tr>
+                        <td>Legg til ARIA: JA</td>
+                        <td>Legg til ARIA: NEI</td>
+                        <td>Legg til ARIA: NEI</td>
+                    </tr>
+                    <tr>
+                        <td>Legg til nøkkelord: JA</td>
+                        <td>Legg til nøkkelord: NEI</td>
+                        <td>Legg til nøkkelord: NEI</td>
+                    </tr>
+                    <tr>
+                        <td>Manglende meta-tag: NEI</td>
+                        <td>Manglende meta-tag: JA</td>
+                        <td>Manglende meta-tag: NEI</td>
+                    </tr>
+                    <tr>
+                        <td>Legg til alt-tekst på linker: NEI</td>
+                        <td>Legg til alt-tekst på linker: JA</td>
+                        <td>Legg til alt-tekst på linker: JA</td>
+                    </tr>
+                    <tr>
+                        <td>Større linker i header: NEI</td>
+                        <td>Større linker i header: JA</td>
+                        <td>Større linker i header: NEI</td>
+                    </tr>
+                    <tr>
+                        <td>Div manglende/feil labels: NEI</td>
+                        <td>Div manglende/feil labels: JA</td>
+                        <td>Div manglende/feil labels: JA</td>
+                    </tr>
+                    <tr>
+                        <td>Redundant link: NEI</td>
+                        <td>Redundant link: NEI</td>
+                        <td>Redundant link: JA</td>
                     </tr>
                 </table>
             </section>
