Endringer etter analyse

--- a/analyse.html
+++ b/analyse.html
@@ -50,7 +50,7 @@
                         <img src="img/accessebilityforside1.png" alt="Bildet viser scoren og forbedringspotensiale forsiden fikk når det kommer til accessebility.">
                     </figure>
                     <p class="analyse">Jeg testa alle tre sidene på Lighthouse, hvor jeg huket av for accessibility, best practices og SEO. Alle sidene fikk 100% på best practices så dette vil ikke bli nevnt noe mer i denne analysen. </p>
-                    <p class="analyse">Forsiden scoret 93% på accessibility. Det Lighthouse klager på er at linkene/ikonene i headeren ikke har noen decription eller alt-tekst sånn at opplesningsverktøy kan lese opp navigasjonen for brukere.</p>
+                    <p class="analyse">Forsiden scoret 93% på accessibility. Det Lighthouse klager på er at linkene/ikonene i headeren ikke har noen decription eller alt-tekst.</p>
                     <p class="analyse">Forsiden scoret 89% på SEO. Det er to problemer her. Det første er at det mangler en meta tag for description. Det andre problemet er at linkene/ikonene i headeren er for tette og bør gjøres større, for at det blir lettere å trykke, spesielt på mobil.</p>
                     <h3>Produktsiden</h3>
                     <figure>
@@ -203,3 +203,10 @@
         </script>
     </body>
 </html>
+
+<!--Kilder:
+    Webutvikling av Tom Heine Natt, Eva M. Hornnes, Jostein Nordengen
+    W3schools.com
+    https://chat.openai.com/
+    https://wave.webaim.org/
+-->
