--- a/produkt.html
+++ b/produkt.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1,0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="description" content="Skobutikken er en nettbutikk som gjør det enkelt og trygt å handle sko på nett. Se vårt store utvalg av sko til hverdag og fest. God handel.">
         <link rel="stylesheet" href="assets/fontawesome-free-6.4.2-web/fontawesome-free-6.4.2-web/css/all.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>Produktside</title>
@@ -13,9 +14,9 @@
             <nav>
                 <ul>
                     <li><a id="ham" class="fa-solid fa-bars"></a></li>
-                    <li><a id="hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
+                    <li><a id="hjem" aria-label="Hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
                     <li><a id="logo" href="index.html">Skobutikken</a></li>
-                    <li><a id="handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
+                    <li><a id="handlekurv" aria-label="Handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
                     <li><a href="produkt.html">Herresko</a></li>
@@ -55,12 +56,10 @@
                 <p>699 kr</p>
             </section>
             <section>
-                <label>Velg farge</label>
-                <select id="velg-farge">
+                <label for="velg-farge">Velg farge</label> <select id="velg-farge">
                     <option value="Brun">Brun</option>
                 </select>
-                <label>Velg størrelse</label>
-                <select id="velg-størrelse">
+                <label for="velg-størrelse">Velg størrelse</label> <select id="velg-størrelse">
                     <option value="37">37</option>
                     <option value="38">38</option>
                     <option value="39">39</option>
@@ -74,9 +73,9 @@
                 <button type="button">Legg i handlekurven</button>
             </section>
             <article>
-                <h3>Produktinformasjon</h3>
+                <h2>Produktinformasjon</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie tellus vitae augue iaculis, vel laoreet velit posuere. Etiam tellus sem, aliquet sodales risus eu, pellentesque fringilla mauris. Nulla ultricies, mauris in accumsan aliquet, enim enim tristique sapien, sit amet convallis ligula libero at sapien. Donec eget fringilla urna. Morbi maximus tortor ac aliquet eleifend.</p>
-                <h3>Frakt og levering</h3>
+                <h2>Frakt og levering</h2>
                 <p>Sed finibus elit odio, sagittis consectetur sapien blandit id. Nam viverra mauris at leo dignissim, vel convallis justo aliquet. Aliquam et ornare nunc. Aliquam feugiat vitae odio ultrices luctus.</p>
                 <h3>Kundeanmeldelser (3)</h3>
                 <p>Nora Nordmann "Ut magna magna, varius id facilisis eu, sodales at arcu."</p>
