--- a/retur.html
+++ b/retur.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1,0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="description" content="Skobutikken er en nettbutikk som gjør det enkelt og trygt å handle sko på nett. Se vårt store utvalg av sko til hverdag og fest. God handel.">
         <link rel="stylesheet" href="assets/fontawesome-free-6.4.2-web/fontawesome-free-6.4.2-web/css/all.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>Returnering</title>
@@ -13,9 +14,9 @@
             <nav>
                 <ul>
                     <li><a id="ham" class="fa-solid fa-bars"></a></li>
-                    <li><a id="hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
+                    <li><a id="hjem" aria-label="Hjem" href="index.html" class="fa-solid fa-house-chimney"></a></li>
                     <li><a id="logo" href="index.html">Skobutikken</a></li>
-                    <li><a id="handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
+                    <li><a id="handlekurv" aria-label="Handlekurv" href="#" class="fa-solid fa-cart-shopping"></a></li>
                 </ul>
                 <ul class="navbar">
                     <li><a href="produkt.html">Herresko</a></li>
@@ -31,12 +32,14 @@
         <main>
             <article>
                 <h1>Returnering</h1>
-                <h3>Ønsker du å returnere en vare?</h3>
+                <h2>Ønsker du å returnere en vare?</h2>
                 <p>Følg disse enkle stegene:</p>
-                <p>1. Pellentesque fringilla, purus at vehicula posuere, sapien nulla tempus tellus, eu condimentum tellus velit egestas enim.</p>
-                <p>2. Donec sapien ligula, finibus facilisis sapien tincidunt, dapibus faucibus mauris. Aliquam fermentum neque id velit congue varius quis eu risus. Suspendisse rutrum nisl in rhoncus auctor.</p>
-                <p>3. Aliquam erat volutpat. Nunc in massa sem. Quisque nec nunc turpis.</p>
-                <p>4. Curabitur dolor diam, finibus eget elit non, finibus faucibus turpis.</p>
+                <ol>
+                    <li>Pellentesque fringilla, purus at vehicula posuere, sapien nulla tempus tellus, eu condimentum tellus velit egestas enim.</li>
+                    <li>Donec sapien ligula, finibus facilisis sapien tincidunt, dapibus faucibus mauris. Aliquam fermentum neque id velit congue varius quis eu risus. Suspendisse rutrum nisl in rhoncus auctor.</li>
+                    <li>Aliquam erat volutpat. Nunc in massa sem. Quisque nec nunc turpis.</li>
+                    <li>Curabitur dolor diam, finibus eget elit non, finibus faucibus turpis.</li>
+                </ol>
             </article>
             <section>
                 <figure>
