Rettet feil på produktsiden

--- a/analyse.html
+++ b/analyse.html
@@ -175,7 +175,43 @@
             </section>
             <section>
                 <article>
-                    <h2>Forbedringer og tiltak</h2>
+                    <h2>Forbedringer</h2>
+                    <ul>
+                        <li>La på en meta description tag på alle sidene.</li>
+                        <li>Retta opp diverse skrivefeil.</li>
+                        <li>Fiksa dicernable name alerten i headeren med aria-labels.</li>
+                        <li>Fiksa diverse feil med label tags.</li>
+                        <li>Fiksa feil i H-tags.</li>
+                        <li>Gjorde om p-tags til ol/li liste på retursiden.</li>
+                        <li>La på mer luft og padding i headeren.</li>
+                        <li>Endret størrelsen og oppsett på valg knappene på produktsiden.</li>
+                        <li>Endret språket fra «en» til «no» siden nettsiden er på norsk.</li>
+                    </ul>
+                    <figure>
+                        <img src="img/header1.png" alt="Bilde av header-elementet før forbedringer." class="forbedringer">
+                        <figcaption>
+                            <p>Bilde av header-elementet før forbedringer.</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/header2.png" alt="Bilde av header-elementet etter forbedringer." class="forbedringer">
+                        <figcaption>
+                            <p>Bilde av header-elementet etter forbedringer.</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/velgknapper1.png" alt="Bilde av valg knappene før forbedringer." class="forbedringer">
+                        <figcaption>
+                            <p>Bilde av valg knappene før forbedringer.</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/velgknapper2.png" alt="Bilde av valg knappene etter forbedringer." class="forbedringer">
+                        <figcaption>
+                            <p>Bilde av valg knappene etter forbedringer.</p>
+                        </figcaption>
+                    </figure>
+                    <p>Bildene over viser de synlige forandringene på nettsiden, mens resten av forbedringene er i selve koden.</p>
                 </article>
             </section>
         </main>
@@ -207,6 +243,7 @@
 <!--Kilder:
     Webutvikling av Tom Heine Natt, Eva M. Hornnes, Jostein Nordengen
     W3schools.com
+    https://validator.w3.org/#validate_by_input
     https://chat.openai.com/
     https://wave.webaim.org/
 -->
