--- a/produkt.html
+++ b/produkt.html
@@ -56,10 +56,12 @@
                 <p>699 kr</p>
             </section>
             <section>
-                <label for="velg-farge">Velg farge</label> <select id="velg-farge">
+                <label for="velg-farge">Velg farge:</label> 
+                <select id="velg-farge">
                     <option value="Brun">Brun</option>
                 </select>
-                <label for="velg-størrelse">Velg størrelse</label> <select id="velg-størrelse">
+                <label for="velg-størrelse">Velg størrelse:</label> 
+                <select id="velg-størrelse">
                     <option value="37">37</option>
                     <option value="38">38</option>
                     <option value="39">39</option>
