Lagt inn mer på analysen

--- a/analyse.html
+++ b/analyse.html
@@ -211,7 +211,22 @@
                             <p>Bilde av valg knappene etter forbedringer.</p>
                         </figcaption>
                     </figure>
-                    <p>Bildene over viser de synlige forandringene på nettsiden, mens resten av forbedringene er i selve koden.</p>
+                    <p>Bildene over viser de synlige forandringene på nettsiden, mens resten av forbedringene er i selve koden. Bildene under viser scoren fra Lighthouse og Webaim etter forbedringene.</p>
+                    <figure>
+                        <img src="img/forsidescore2.png" alt="Bildet viser scoren forsiden fikk på SEO analysen andre runde.">
+                        <figcaption>
+                            <p>Bildet viser scoren forsiden fikk på SEO analysen andre runde.</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/produktscore2.png" alt="Bildet viser scoren produktsiden fikk på SEO analysen andre runde.">
+                        <figcaption>
+                            <p>Bildet viser scoren produktsiden fikk på SEO analysen andre runde.</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="#">
+                    </figure>
                 </article>
             </section>
         </main>
