--- a/retur.html
+++ b/retur.html
@@ -33,7 +33,7 @@
             <article>
                 <h1>Returnering</h1>
                 <h2>Ønsker du å returnere en vare?</h2>
-                <p>Følg disse enkle stegene:</p>
+                <h3>Følg disse enkle stegene:</h3>
                 <ol>
                     <li>Pellentesque fringilla, purus at vehicula posuere, sapien nulla tempus tellus, eu condimentum tellus velit egestas enim.</li>
                     <li>Donec sapien ligula, finibus facilisis sapien tincidunt, dapibus faucibus mauris. Aliquam fermentum neque id velit congue varius quis eu risus. Suspendisse rutrum nisl in rhoncus auctor.</li>
