--- a/analyse.html
+++ b/analyse.html
@@ -225,7 +225,10 @@
                         </figcaption>
                     </figure>
                     <figure>
-                        <img src="#">
+                        <img src="img/returscore2.png" alt="Bildet viser scoren retursiden fikk på SEO analysen andre runde.">
+                        <figcaption>
+                            <p>Bildet viser scoren retursiden fikk på SEO analysen andre runde.</p>
+                        </figcaption>
                     </figure>
                 </article>
             </section>
