--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <a href="#" class="knapper">Tilbehør til sko</a>
             </section>
             <section id="search">
-                <input class="searchbar" type="text" placeholder="Søk blant produkter..." id="søk">
+                <label for="søk">Søk blant produkter</label>
+                <input class="searchbar" type="text" placeholder="Tursko" id="søk">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-question"></i>
             </section>
