Ferdig med trinn 2

--- a/analyse.html
+++ b/analyse.html
@@ -230,6 +230,24 @@
                             <p>Bildet viser scoren retursiden fikk på SEO analysen andre runde.</p>
                         </figcaption>
                     </figure>
+                    <figure>
+                        <img src="img/webaimforside2.png" alt="Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.">
+                        <figcaption>
+                            <p>Bildet viser tilbakemeldingen på forsiden fra Webaim, andre runde.</p>
+                        </figcaption>
+                    </figure>
+                    <p>Forsiden har nå ingen errors fra Webaim. Det er fortsatt noen alerts, men disse er ikke like viktige. Det ene er at jeg har linka til samme sted med flere linker, noe jeg vil at det skal være. Det andre er at den mener "699kr" og "unisex" kan være H-tags i stedet for p, men jeg er litt usikker på dette. Så siden det ikke er error lar jeg det stå for nå.</p>
+                    <figure>
+                        <img src="img/webaimprodukt2.png" alt="Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.">
+                        <p>Bildet viser tilbakemeldingen på produktsiden fra Webaim, andre runde.</p>
+                    </figure>
+                    <p>Produktsiden har ingen errors, men får samme alerts som forsiden. Jeg ser at webaim gjerne vil bytte p-tags til H om teksten blir for kort.</p>
+                    <figure>
+                        <img src="img/webaimretur2.png" alt="Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.">
+                        <p>Bildet viser tilbakemeldingen på retursiden fra Webaim, andre runde.</p>
+                    </figure>
+                    <p>Retursiden har ingen errors. Kun 2 alerts som handler om at en side er linket til med flere linker.</p>
+                    <p>Generelt er jeg veldig fornøyd med resultatene etter forbedringer. Det er ikke lenger noen "alvorlige" feil og det lille som er igjen av alerts er pirk fra webaim. Det som gjorde at scoren endret seg var at jeg tok gode notater av feilene mine og fiksa det så godt jeg kunne, det var hjelpsomt siden den vanlige html-validatoren ikke sier ifra om de samme feilene.</p>
                 </article>
             </section>
         </main>
